--- a/Website/Basis Website [SBR Viewer]/css/custom.css
+++ b/Website/Basis Website [SBR Viewer]/css/custom.css
@@ -187,13 +187,12 @@ a {
     color: #28c3ab;
     background-color: transparent;
 }
-
-    .btn-default:hover,
-    .btn-default:focus {
-        border: 1px solid #28c3ab;
-        outline: 0;
-        color: #000;
-        background-color: #28c3ab;
+.btn-default:hover,
+.btn-default:focus {
+    border: 1px solid #28c3ab;
+    outline: 0;
+    color: #000;
+    background-color: #28c3ab;
     }
 
 .btn-huge {
@@ -234,6 +233,21 @@ a {
     color: rgba(255,255,255,0.7);
     *color: rgb(255,255,255); /* IE7 */
     background: url(../img/header-bg.jpg) no-repeat center center scroll;
+    background-color: #000;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;
+}
+
+.intro-rtc {
+width: 100%;
+    padding: 100px 0 10px 0;
+    text-align: center;
+    color: rgb(255,255,255); /* IE8 */
+    color: rgba(255,255,255,0.7);
+    *color: rgb(255,255,255); /* IE7 */
+    background: url(../img/rugby_goal.jpg) no-repeat center center scroll;
     background-color: #000;
     -webkit-background-size: cover;
     -moz-background-size: cover;
