custom.css .intro-maatwerk

--- a/Website/Basis Website [SBR Viewer]/css/custom.css
+++ b/Website/Basis Website [SBR Viewer]/css/custom.css
@@ -255,6 +255,21 @@ width: 100%;
     -o-background-size: cover;
 }
 
+.intro-maatwerk {
+    width: 100%;
+    padding: 100px 0 10px 0;
+    text-align: center;
+    color: rgb(255,255,255); /* IE8 */
+    color: rgba(255,255,255,0.7);
+    *color: rgb(255,255,255); /* IE7 */
+    background: url(../img/Kids-rugby.jpg) no-repeat center center scroll;
+    background-color: #000;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;
+}
+
 .intro-wrapper {
     position: absolute;
     left: 0;
