--- a/Website/Basis Website [SBR Viewer]/css/navbar.css
+++ b/Website/Basis Website [SBR Viewer]/css/navbar.css
@@ -53,7 +53,7 @@
         outline: 0;
         background: none;
         color: #fff !important;
-        border-bottom: 2px solid #41dd85;
+/*        border-bottom: 2px solid #41dd85;*/
     }
 
 .top-nav-collapse .nav li a:hover {
