tabel oranje toegevoegd

--- a/Website/Basis Website [SBR Viewer]/css/custom.css
+++ b/Website/Basis Website [SBR Viewer]/css/custom.css
@@ -926,3 +926,10 @@ width: 100%;
         min-height: 10em;
     }
 }
+.table {
+    text-align: center;
+}
+
+.table tr, td {
+    border: 1px solid black;
+}
