--- a/Website/Basis Website [SBR Viewer]/css/custom.css
+++ b/Website/Basis Website [SBR Viewer]/css/custom.css
@@ -755,26 +755,24 @@ width: 100%;
 }
 
 
-/* Pagina - SOFTWARE */
+/* Pagina - aangeslotenverenigingen */
 
-.software {
+.aangeslotenverenigingen {
     *background-color: #F2F3F5; /* IE7 */
 }
 
-    .software .section-container a {
+    .aangeslotenverenigingen .section-container a {
         border-bottom-width: 0;
     }
 
 
-    .software .section-container p {
+    .aangeslotenverenigingen .section-container p {
         text-align: center;
     }
 
-    .software .software-container {
+    .aangeslotenverenigingen .software-container {
         *width: 100%; /* IE7 */
     }
-
-
 
 
 /* Pagina - DOWNLOAD */
@@ -866,7 +864,7 @@ width: 100%;
 }
 
 
-@media(max-width:992px) {
+@media(max-widt:992px) {
     .contact-left {
         padding-right: 0px !important;
         width: 50% !important;
@@ -878,6 +876,15 @@ width: 100%;
         width: 50% !important;
         *width: 45% !important; /* IE7 */
     }
+}
+
+.content {
+    position: relative;
+    max-width: 75%;
+    margin-right: 22.5%;
+    margin-left: 2.5%;
+/*    height: 50px;*/
+/*    background: red;*/
 }
 
 @media(max-width:767px) {
@@ -892,6 +899,18 @@ width: 100%;
         padding-left: 20px !important;
         margin-top: 70px !important;
         width: 100% !important;
+    }
+
+    .content {
+        max-width: 95%;
+        margin: 0 auto;
+        
+    }
+}
+
+@media(min-width: 768px) and (max-width: 1199px) {
+    .container {
+        width: 100%
     }
 }
 
@@ -933,3 +952,4 @@ width: 100%;
 .table tr, td {
     border: 1px solid black;
 }
+
