--- a/Website/Basis Website [SBR Viewer]/css/section.css
+++ b/Website/Basis Website [SBR Viewer]/css/section.css
@@ -46,6 +46,20 @@ section:nth-child(even) {
 }
 
 
+.software .section-container a {
+        border-bottom-width: 0;
+    }
+
+
+    .software .section-container p {
+        text-align: center;
+    }
+
+    .software .software-container {
+        *width: 100%; /* IE7 */
+    }
+
+
 .section-header {
     margin-left: auto;
     margin-right: auto;
