--- a/Website/Basis Website [SBR Viewer]/css/navbar.css
+++ b/Website/Basis Website [SBR Viewer]/css/navbar.css
@@ -63,21 +63,21 @@
 .top-nav-collapse .nav li a:hover {
     outline: 0;
     background: none;
-    color: #41dd85 !important;
+    color: #00CC4D  !important;
     border-bottom: none !important;
 }
 
 .navbar-custom .nav li.active a {
     outline: 0;
     background: none;
-    color: #41dd85 !important;
+    color: #00CC4D !important;
     border-bottom: none !important;
 }
 
 nav.navbar-intern {
     position: fixed;
     top: 90px;
-    right: 15%;
+    right: 1%;
  /*   margin-bottom: 0;
     text-transform: uppercase;
     letter-spacing: 1px;
@@ -85,13 +85,14 @@ nav.navbar-intern {
     z-index: 1000;*/
 }
 
-div.navbar-intern {
+/*div.navbar-intern {
     float: right;
-}
+}*/
 
     .navbar-intern ul {
-        background: rgba(255, 0, 0, 0.5);
-    }
+        background: rgba(135, 141, 117, 0.5);
+/*        background: rgba(0, 127, 48, 0.7);
+*/    }
 
     .navbar-intern li {
         float: none;
@@ -121,7 +122,7 @@ div.navbar-intern {
     }
 
         .navbar-custom .nav li a:hover {
-            color: #41dd85 !important;
+            color: #00CC4D !important;
         }
 
     .navbar-intern {
@@ -160,7 +161,8 @@ div.navbar-intern {
 
     .top-nav-collapse {
         background-color: rgb(255, 255, 255); /* IE8 */
-        background-color: rgba(255, 255, 255, 0.5);
+        background-color: rgba(135, 141, 117, 0.7);
+/*        background-color: rgba(255, 255, 255, 0.5);*/
         margin-top: 0px;
         color: #333332;
     }
