bijwerken site op basis van in description genoemde punten
1. Contact formulier enkel @ home, copyright+stuur mail laten staan.
2. Logo’s fixen
3. Heruitlijnen RTC tekst, belangrijke tekst benadrukken “quoten”
4. Media sectie bij maatwerk & breedtesport
5. Logo facebook onderaan toevoegen

--- a/Website/Basis Website [SBR Viewer]/css/custom.css
+++ b/Website/Basis Website [SBR Viewer]/css/custom.css
@@ -972,3 +972,17 @@ iframe {
 .table {
     width: 100%
 }
+
+.aangeslotenverenigingen-container h3 {
+    padding-top: 20px;
+}
+
+.aangeslotenverenigingen-container img {
+    width: 200px;
+    height: 200px;
+    border: 1px solid #000;
+}
+
+div.partners img {
+    padding: 0px 5px;
+}
